reduced SPADE to only generate a single VC